src/objects/ContactGroupMember__c.object
<CustomObject>
    <description>Junction object for many to many relationship between Contact and Contact Group objects</description>
    <fields>
        <fullName>ContactGroup__c</fullName>
        <label>Contact Group</label>
        <referenceTo>ContactGroup__c</referenceTo>
        <relationshipLabel>Contact Groups</relationshipLabel>
        <relationshipName>Contact_Group_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Groups</relationshipLabel>
        <relationshipName>Contact_Group_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DateAddedToThisGroup__c</fullName>
        <description>Same as created date but with a custom label</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Added to this Group</label>
        <type>Date</type>
    </fields>
    <label>Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CGA-{00000000}</displayFormat>
        <label>Contact Group Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>